--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                 </div>
             </div>
         </section>
-        
+
     </header>
     <main>
         <section class="habits">
             <h2 class="habits-title">Change Your Habits</h2>
             <p class="habits-description">
-                We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a
+                We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to
+                a
                 gym.</p>
             <div class="habits-container">
                 <div class="box">
@@ -83,6 +84,18 @@
                     <h4 class="box-title">Weight Loss</h4>
                     <p class="box-description">We believe fitness should be accessible to everyone</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="run">
+            <div class="run-text">
+                <h3 class="run-title">Run an Extra Mile Easily</h3>
+                <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds
+                of professional workouts.</p>
+                <button class="btn1">Join Now</button>
+            </div>
+            <div class="run-image">
+                <img src="images/run.jpg" alt="">
             </div>
         </section>
     </main>
