--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         <section class="run">
             <div class="run-text">
                 <h3 class="run-title">Run an Extra Mile Easily</h3>
-                <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds
-                of professional workouts.</p>
+                <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                    of income or access to a gym. With hundreds
+                    of professional workouts.</p>
                 <button class="btn1">Join Now</button>
             </div>
             <div class="run-image">
@@ -99,8 +100,110 @@
             </div>
         </section>
     </main>
-    <footer>
 
+    <section class="bmi">
+        <h1 class="bmi-title">BMI Calculator</h1>
+        <p class="bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of
+            income or access to a gym.</p>
+        <div class="table-input">
+            <div class="table-and-input">
+                <div class="bmi-chart">
+                    <h4 class="bmi-chart-title">BMI Calculator Chart</h4>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="form">
+                    <h4 class="form-title">Calculate your BMI</h4>
+                    <p class="form-description">We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or access to a gym.</p>
+
+                    <form action="">
+                        <input type="text" placeholder="Height/cm" id="text">
+                        <input type="text" placeholder="Weight/kg" id="text"><br>
+                        <input type="number" name="" placeholder="Age" id="text">
+                        <select name="Sex" id="text" class="gender">
+                            <option value="Sex">Sex</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                        </select>
+                        <br>
+                        <select name="" id="text" class="select">
+                            <option value="1">Select an activity factor</option>
+                            <option value="2">2</option>
+                        </select>
+                        <br>
+                        <input type="submit" value="Calculate" class="btn1 btn3">
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="team">
+        <h2 class="team-title">Meet Our Team</h2>
+        <p class="team-description">We believe fitness should be accessible to everyone, everywhere, regardless of
+            income or <br>
+            access to a gym.</p>
+        <div class="trainer-container">
+            <div class="trainer-card">
+                <img src="images/trainer1.png" alt="">
+                <h5 class="name">Jerome Bell</h5>
+                <p class="position">Trainer</p>
+            </div>
+            <div class="trainer-card">
+                <img src="images/trainer2.png" alt="">
+                <h5 class="name">Cameron Williamson</h5>
+                <p class="position">Trainer</p>
+            </div>
+            <div class="trainer-card">
+                <img src="images/trainer3.png" alt="">
+                <h5 class="name">Darrell Steward</h5>
+                <p class="position">Trainer</p>
+            </div>
+            <div class="trainer-card">
+                <img src="images/trainer4.png" alt="">
+                <h5 class="name">Dianne Russell</h5>
+                <p class="position">Trainer</p>
+            </div>
+            <div class="trainer-card">
+                <img src="images/trainer5.png" alt="">
+                <h5 class="name">Cody Fisher</h5>
+                <p class="position">Trainer</p>
+            </div>
+            <div class="trainer-card">
+                <img src="images/trainer6.png" alt="">
+                <h5 class="name">Theresa Webb</h5>
+                <p class="position">Trainer</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+         
     </footer>
 </body>
 
