--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p class="card-1-text">Free Workout Videos</p>
                 </div>
                 <div class="card-2">
-                    <div class="ball"></div>
+                    <div class="ball"><i class="fa-solid fa-play"></i></div>
                     <div class="text">
                         <h3 class="card-2-title">350+</h3>
                         <p class="card-2-text">Video tutorial</p>
@@ -203,7 +203,37 @@
         </div>
     </section>
     <footer>
-         
+        <div class="text-container">
+            <div class="text-box">
+                <h1 class="fitness">Fitness</h1>
+                <p class="fitness-description">We believe fitness should be accessible to everyone,
+                    everywhere, regardless of income or access to a gym. With
+                    hundreds of professional workouts.</p>
+            </div>
+            <div class="text-box">
+                <h1 class="text-title">Get Started</h1>
+                <ul>
+                    <li> Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+            <div class="text-box">
+                <h1 class="text-title">Get Started</h1>
+                <ul>
+                    <li>Fitness </li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="last-text">
+            <div class="divider"></div>
+            <p class="footer-description">All right reserved @Fitness 2024</p>
+        </div>
     </footer>
 </body>
 
