Added a extra section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,29 @@
             </div>
         </div>
     </section>
+
+    <section class="extra-section">
+        <h1 class="extra-section-title">Upcoming Events</h1>
+        <p class="extra-section-description">Stay updated with our latest events and workshops.</p>
+        <div class="extra-section-container">
+            <div class="extra-card">
+                <img src="images/yoga.jpg" alt="">
+                <h3 class="extra-card-title">Yoga Workshop</h3>
+                <p class="date-time">August 20, 2024 - 10:00 AM</p>
+                <p class="extra-description">Join us for a revitalizing yoga workshop to improve your flexibility and peace of
+                    mind.</p>
+                <a href="" class="details-button">Learn More</a>
+            </div>
+            <div class="extra-card">
+                <img src="images/Nutrition Seminar.jpg" alt="">
+                <h3 class="extra-card-title">Nutrition Seminar</h3>
+                <p class="date-time">September 5, 2024 - 2:00 PM</p>
+                <p class="extra-description">Discover the secrets to a balanced diet and how to maintain a healthy lifestyle.</p>
+                <a href="" class="details-button">Learn More</a>
+            </div>
+        </div>
+        <button class="btn1 btn4">View All Events &rarr;</button>
+    </section>
     <footer>
         <div class="text-container">
             <div class="text-box">
